--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Start on Heroku: Node.js",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/heroku/node-js-getting-started",
+  "name": "FCC Microservice Header Parser",
+  "description": "Microserver to return ip, language and operating system",
+  "repository": "https://gitlab.com/jacebenson/fcc-microservice-headerparser",
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
-  "keywords": ["node", "express", "static"],
+  "keywords": ["node"],
   "image": "heroku/nodejs"
 }
