--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "accept-language-parser": "^1.3.0",
     "ejs": "2.4.1",
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "useragent": "^2.1.12"
   },
   "repository": {
     "type": "git",
